--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,16 @@
 .vertx
 target
+.git
+CVS
+.svn
+.hg
+.lock-wscript
+.wafpickle-N
+*.swp
+.DS_Store
+._*
+.idea
+npm-debug.log
+dist
+vendor
+node_modules
