--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,17 @@
   	<maven.compiler.source>1.8</maven.compiler.source>
   	<maven.compiler.target>1.8</maven.compiler.target>
   </properties>
+  
+  <build>
+	  <plugins>
+	      <plugin>
+	          <groupId>org.codehaus.mojo</groupId>
+	          <artifactId>exec-maven-plugin</artifactId>
+	          <version>1.2.1</version>
+	          <configuration>
+	              <mainClass>eu.rethink.mn.MsgNode</mainClass>
+	          </configuration>
+	      </plugin>
+	  </plugins>
+    </build>
 </project>
