--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,12 @@
 		<dependency>
 			<groupId>io.vertx</groupId>
 			<artifactId>vertx-core</artifactId>
-			<version>3.0.0</version>
+			<version>3.1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.vertx</groupId>
+			<artifactId>vertx-hazelcast</artifactId>
+			<version>3.1.0</version>
 		</dependency>
 	</dependencies>
 
