--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "core runtime development",
   "main": "src/main.js",
   "scripts": {
-    "init-setup": "npm init && npm install -g jspm karma karma-browserify karma-mocha karma-mocha-reporter karma-chrome-launcher && npm install && jspm init",
+    "init-setup": "npm init && npm install -g jspm karma-cli gulp-cli && npm install && jspm init && node setup.js",
     "preinstall": "npm install -g gulp-cli",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
