--- a/node.config.json
+++ b/node.config.json
@@ -3,13 +3,19 @@
     "domain": "ua.pt",
     "registry": {
       "url": "http://localhost:4567"
-    }
+    },
+	"globalregistry": {
+	  "url": "http://130.149.22.133:5002"
+	}
   },
 
   "prod": {
     "domain": "ua.pt",
     "registry": {
       "url": "http://localhost:4567"
-    }
+    },
+	"globalregistry": {
+	  "url": "http://130.149.22.133:5002"
+	}
   }
 }
