--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msg-node-protostub",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "description": "core runtime development",
   "main": "src/main.js",
   "scripts": {
@@ -31,6 +31,7 @@
     "gulp": "^3.9.0",
     "gulp-bump": "^1.0.0",
     "gulp-git": "^1.6.0",
+    "gulp-if": "^2.0.0",
     "gulp-insert": "^0.5.0",
     "gulp-prompt": "^0.1.2",
     "gulp-replace": "^0.5.4",
@@ -43,9 +44,11 @@
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.1",
     "mocha": "^2.3.2",
+    "through2": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
-    "watchify": "^3.4.0"
+    "watchify": "^3.4.0",
+    "yargs": "^4.2.0"
   },
   "jspm": {
     "directories": {
