--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,16 @@
 			<artifactId>vertx-hazelcast</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.21</version>
+		</dependency>
+		<dependency> 
+  			<groupId>ch.qos.logback</groupId>
+  			<artifactId>logback-classic</artifactId>
+  			<version>1.1.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
