--- a/package.json
+++ b/package.json
@@ -52,6 +52,6 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#master"
+    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.3.0"
   }
 }
