--- a/package.json
+++ b/package.json
@@ -22,15 +22,16 @@
   },
   "homepage": "https://github.com/reTHINK-project/core-framework#readme",
   "devDependencies": {
-    "assert": "^1.3.0",
-    "babelify": "^6.3.0",
+    "assert": "^1.4.1",
+    "babelify": "^7.3.0",
     "browserify": "^11.2.0",
     "chai": "^3.3.0",
     "expect.js": "^0.3.1",
     "gulp": "^3.9.0",
+    "gulp-babel": "^6.1.2",
     "gulp-bump": "^1.0.0",
     "gulp-git": "^1.6.0",
-    "gulp-if": "^2.0.0",
+    "gulp-if": "^2.0.1",
     "gulp-insert": "^0.5.0",
     "gulp-prompt": "^0.1.2",
     "gulp-replace": "^0.5.4",
