--- a/package.json
+++ b/package.json
@@ -22,9 +22,6 @@
     "url": "https://github.com/reTHINK-project/dev-msg-node-vertx/issues"
   },
   "homepage": "https://github.com/reTHINK-project/core-framework#readme",
-  "dependencies": {
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop-policies"
-  },
   "devDependencies": {
     "assert": "^1.4.1",
     "babelify": "^7.3.0",
@@ -57,6 +54,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.3.0"
+    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.3.0",
+    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
