--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,9 @@
 {
-  "presets": ["es2015"]
+  "presets": ["es2015"],
+  "plugins": [
+    "add-module-exports",
+    "transform-inline-environment-variables",
+    "transform-runtime",
+    "transform-regenerator"
+  ]
 }
