--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   "homepage": "https://github.com/reTHINK-project/dev-msg-node-vertx#readme",
   "devDependencies": {
     "assert": "^1.4.1",
+    "babel-plugin-add-module-exports": "^0.1.2",
+    "babel-plugin-transform-inline-environment-variables": "^6.5.0",
+    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-plugin-transform-runtime": "^6.7.5",
+    "babel-preset-es2015": "^6.6.0",
     "babelify": "^7.3.0",
     "browserify": "^11.2.0",
     "chai": "^3.3.0",
