--- a/package.json
+++ b/package.json
@@ -60,6 +60,6 @@
   },
   "dependencies": {
     "dev-registry-domain": "rethink-project/dev-registry-domain#R0.3.0",
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
+    "runtime-core": "github:rethink-project/dev-runtime-core#develop-policies"
   }
 }
