--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-plugin-transform-regenerator": "^6.6.5",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
+    "babel-runtime": "^6.11.6",
     "babelify": "^7.3.0",
     "browserify": "^11.2.0",
     "chai": "^3.3.0",
