--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
   ],
   "author": "reThink Project",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/reTHINK-project/dev-msg-node-vertx/issues"
+  "bugs": { "url": "https://github.com/reTHINK-project/dev-msg-node-vertx/issues"
   },
   "homepage": "https://github.com/reTHINK-project/core-framework#readme",
   "devDependencies": {
@@ -62,7 +61,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#connector-reply-fix",
+    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.4.0",
     "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
