--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#connector-reply-fix",
+    "dev-registry-domain": "rethink-project/dev-registry-domain#master",
     "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
