--- a/node.config.json
+++ b/node.config.json
@@ -3,7 +3,7 @@
     "domain": "ua.pt",
     "port": "9090",
     "registry": {
-      "url": "https://registry.hysmart.rethink.ptinovacao.pt",
+      "url": "http://localhost:4567",
       "retries": 2
     },
 	"globalregistry": {
