--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
   },
   "dependencies": {
     "dev-registry-domain": "rethink-project/dev-registry-domain#R0.4.0",
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
+    "runtime-core": "github:rethink-project/dev-runtime-core#v0.7.0"
   }
 }
