--- a/node.config.json
+++ b/node.config.json
@@ -1,6 +1,6 @@
 {
   "dev": {
-    "domain": "localhost",
+    "domain": "ua.pt",
     "port": "9090",
     "registry": {
       "url": "http://localhost:4567",
