--- a/package.json
+++ b/package.json
@@ -61,7 +61,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#30-fix-update-message",
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
+    "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
+    "runtime-core": "github:rethink-project/dev-runtime-core#dev-interworking"
   }
 }
