--- a/package.json
+++ b/package.json
@@ -62,6 +62,6 @@
   },
   "dependencies": {
     "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
-    "runtime-core": "github:rethink-project/dev-runtime-core#dev-interworking"
+    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
