--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "dependencies": {
 
-    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.7.0",
+    "dev-registry-domain": "rethink-project/dev-registry-domain#20-connector-tls",
     "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
