--- a/node.config.json
+++ b/node.config.json
@@ -4,7 +4,10 @@
     "port": "9090",
     "registry": {
       "url": "http://localhost:4567",
-      "retries": 2
+      "retries": 2,
+      "ssl": {
+        "enabled": false
+      }
     },
 	"globalregistry": {
 	  "url": "http://130.149.22.220:5002"
