--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 addons:
   hosts:
-    - localhost
-    - msg-node.localhost
+    - ua.pt
+    - msg-node.ua.pt
 language: node_js
 sudo: required
 test: karma start
@@ -18,7 +18,7 @@ before_install:
   - sudo apt-get install maven
   - export JAVA_HOME='/usr/lib/jvm/java-8-oracle/jre'
   - cd ..
-  - git clone --branch=develop https://github.com/reTHINK-project/dev-registry-domain.git
+  - git clone https://github.com/reTHINK-project/dev-registry-domain.git
   - cd dev-registry-domain/server/
   - sudo mvn dependency:resolve
   - sudo mvn verify
