--- a/node.config.json
+++ b/node.config.json
@@ -1,13 +1,13 @@
 {
   "dev": {
-    "domain": "localhost",
+    "domain": "ua.pt",
     "port": "9090",
     "registry": {
-      "url": "http://192.168.99.100:4568",
+      "url": "http://localhost:4567",
       "retries": 2
     },
 	"globalregistry": {
-	  "url": "http://130.149.22.220:5002"
+	  "url": "http://130.149.22.133:5002"
 	}
   },
 
@@ -18,7 +18,7 @@
       "url": "http://localhost:4567"
     },
 	"globalregistry": {
-	  "url": "http://130.149.22.220:5002"
+	  "url": "http://130.149.22.133:5002"
 	}
   }
 }
