--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "test": "test"
   },
   "dependencies": {
-
-    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.7.0",
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
+    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.4.0",
+    "runtime-core": "github:rethink-project/dev-runtime-core#v0.7.0"
   }
 }
