--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "dependencies": {
 
-    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.8.1",
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
+    "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
+    "runtime-core": "github:rethink-project/dev-runtime-core#core-discovery-integration"
   }
 }
