--- a/package.json
+++ b/package.json
@@ -63,6 +63,6 @@
   "dependencies": {
 
     "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
-    "runtime-core": "github:rethink-project/dev-runtime-core#core-discovery-integration"
+    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
