--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "test": "test"
   },
   "dependencies": {
-
-    "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
+    "dev-registry-domain": "rethink-project/dev-registry-domain#32-connector-sm",
     "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
