--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "dependencies": {
 
-    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.8.1",
+    "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
     "runtime-core": "github:rethink-project/dev-runtime-core#v0.8.0"
   }
 }
