--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "author": "reThink Project",
   "license": "ISC",
-  "bugs": { "url": "https://github.com/reTHINK-project/dev-msg-node-vertx/issues"
+  "bugs": {
+    "url": "https://github.com/reTHINK-project/dev-msg-node-vertx/issues"
   },
   "homepage": "https://github.com/reTHINK-project/core-framework#readme",
   "devDependencies": {
@@ -61,7 +62,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#R0.9.0",
-    "runtime-core": "github:rethink-project/dev-runtime-core#master"
+    "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
+    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
