--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#32-connector-sm",
+    "dev-registry-domain": "rethink-project/dev-registry-domain#R1.0.0",
     "runtime-core": "github:rethink-project/dev-runtime-core#disconnected-hyperties"
   }
 }
