--- a/package.json
+++ b/package.json
@@ -61,6 +61,6 @@
   },
   "dependencies": {
     "dev-registry-domain": "rethink-project/dev-registry-domain#R1.0.0",
-    "runtime-core": "github:rethink-project/dev-runtime-core#disconnected-hyperties"
+    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
