--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "msg-node-protostub",
-  "version": "0.8.1",
+  "version": "0.9.0",
   "description": "Message Node builded based on Java and vertx",
   "main": "src/main.js",
-  "scripts": { "preinstall": "npm install -g gulp-cli karma-cli",
+  "scripts": {
+    "preinstall": "npm install -g gulp-cli karma-cli",
     "test": "karma start"
   },
   "repository": {
@@ -61,7 +62,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "rethink-project/dev-registry-domain#develop",
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
+    "dev-registry-domain": "github:rethink-project/dev-registry-domain#R1.0.0",
+    "runtime-core": "github:rethink-project/dev-runtime-core#v0.9.0"
   }
 }
