--- a/package.json
+++ b/package.json
@@ -26,10 +26,10 @@
     "assert": "^1.4.1",
     "babel-plugin-add-module-exports": "^0.1.2",
     "babel-plugin-transform-inline-environment-variables": "^6.5.0",
-    "babel-plugin-transform-regenerator": "^6.6.5",
+    "babel-plugin-transform-regenerator": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.7.5",
     "babel-preset-es2015": "^6.6.0",
-    "babel-runtime": "^6.11.6",
+    "babel-runtime": "^6.26.0",
     "babelify": "^7.3.0",
     "browserify": "^11.2.0",
     "chai": "^3.3.0",
@@ -51,7 +51,7 @@
     "karma-mocha-reporter": "^1.3.0",
     "karma-phantomjs-launcher": "^1.0.2",
     "mocha": "^2.3.2",
-    "phantomjs-prebuilt": "^2.1.12",
+    "phantomjs-prebuilt": "^2.1.15",
     "through2": "^2.0.1",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
@@ -62,7 +62,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "github:rethink-project/dev-registry-domain#R1.0.0",
-    "runtime-core": "github:rethink-project/dev-runtime-core#v0.9.0"
+    "dev-registry-domain": "github:rethink-project/dev-registry-domain#expires-limit-fix",
+    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
   }
 }
