--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - sudo apt-get install maven
   - export JAVA_HOME='/usr/lib/jvm/java-8-oracle/jre'
   - cd ..
-  - git clone --branch=develop https://github.com/reTHINK-project/dev-registry-domain.git
+  - git clone --branch=R1.0.0 https://github.com/reTHINK-project/dev-registry-domain.git
   - cd dev-registry-domain/server/
   - sudo mvn dependency:resolve
   - sudo mvn verify
