--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "msg-node-protostub",
-  "version": "0.9.0",
+  "version": "0.10.0",
   "description": "Message Node builded based on Java and vertx",
   "main": "src/main.js",
   "scripts": {
@@ -62,7 +62,7 @@
     "test": "test"
   },
   "dependencies": {
-    "dev-registry-domain": "github:rethink-project/dev-registry-domain#develop",
-    "runtime-core": "github:rethink-project/dev-runtime-core#develop"
+    "dev-registry-domain": "github:rethink-project/dev-registry-domain#R1.0.1",
+    "runtime-core": "github:rethink-project/dev-runtime-core#v0.10.0"
   }
 }
