--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
+		<dependency>
+	      <groupId>io.vertx</groupId>
+	      <artifactId>vertx-web</artifactId>
+	      <version>3.4.2</version>
+    	</dependency>
 	</dependencies>
 
 	<build>
